--- a/register.html
+++ b/register.html
@@ -12,11 +12,10 @@
         }
             h1 {
                 font-family: Book Antiqua,Palatino,Palatino Linotype,Palatino LT STD,Georgia,serif; 
-                fon
                  }
 
         h3{
-            font-family: 'Courier New', Courier, monospace;
+            font-family: Courier, monospace;
             font-size: 30px;
             border-bottom: 3px solid rgb(255, 255, 255);
             color: white;
