--- a/register.html
+++ b/register.html
@@ -8,10 +8,17 @@
     <title>Document</title>
     <style>
         body{
-            background-color: rgb(86, 57, 57);
+            background-color: rgb(11, 15, 53);
+        }
+        form{
+            padding: 50px;
+            padding-top: 0px;
         }
             h1 {
-                font-family: Book Antiqua,Palatino,Palatino Linotype,Palatino LT STD,Georgia,serif; 
+                font-family: Book Antiqua,Palatino,Palatino Linotype,Palatino LT STD,Georgia,serif;
+                color: white; 
+                font-size: 48px;
+
                  }
 
         h3{
@@ -26,9 +33,9 @@
             padding: 5px 10px 5px 20px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-size: large;
-            background-color: rgb(136, 214, 217);
-            border: 2px solid rgb(62, 21, 101);
-            color: rgb(121, 121, 121);
+            background-color: rgb(0, 0, 0);
+            border: 2px solid rgb(35, 64, 194);
+            color: rgb(206, 206, 206);
             border-radius: 30px;
             margin: 10px;
         }
@@ -38,9 +45,9 @@
             padding: 5px 10px 5px 20px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-size: large;
-            background-color: rgb(136, 214, 217);
-            border: 2px solid rgb(62, 21, 101);
-            color: rgb(121, 121, 121);
+            background-color: rgb(0, 0, 0);
+            border: 2px solid rgb(35, 64, 194);
+            color: rgb(206, 206, 206);
             border-radius: 30px;
             margin: 10px;
         }
@@ -49,8 +56,8 @@
 </head>
 <body>
     <div>
-        <form>
-            <h1 >Register</h1>
+        <h1 align="center">Register</h1>
+        <form class="form">
             <h3>Farmer Details</h3>
             <div class="name">
                 <input type="text" name="" id="" placeholder="First Name">
@@ -71,6 +78,8 @@
             <div class="name">
                 <input type="text" name="" id="" placeholder="Phone Number">
             </div>
+        </form>
+            <form class="form">
             <h3>Account Details</h3>
             <div class="name">
                 <select for="Bank Name">
