--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
             color: white;
         }
         input{
-            height: 45px;
+            height: 35px;
             width: 400px;
             padding: 5px 10px 5px 20px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -40,7 +40,7 @@
             margin: 10px;
         }
         select{
-            height: 60px;
+            height: 50px;
             width: 435px;
             padding: 5px 10px 5px 20px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -50,6 +50,24 @@
             color: rgb(206, 206, 206);
             border-radius: 30px;
             margin: 10px;
+        }
+
+        button{
+            height: 50px;
+            width: 250px;
+            padding: 5px 10px 5px 20px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: large;
+            background-color: rgb(75, 11, 11);
+            border: 2px solid rgb(136, 35, 194);
+            color: rgb(206, 206, 206);
+            border-radius: 30px;
+            margin: 10px;
+        }
+
+        #button{
+            display: grid;
+            place-items: center;
         }
 
     </style>
@@ -107,8 +125,10 @@
             <div class="name">
                 <input type="text" name="" id="" placeholder="E-mail">
             </div>
-
         </form>
+        <div id="button">
+        <button type="submit">Register</button>
+    </div>
     </div>
 </body>
 </html>
