welcome and register done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,20 @@
             </ul>
           </div>
     </header>
-    <img alt="" height="2000px" width="100%">
+    <section class="section">
+        <div class="container">
+            Crop residue burning is a major contributor to air pollution in many agricultural regions. Over the past decades, there has been a significant increase in the incidence of stubble burning after harvests, especially of rice and wheat. This releases large amounts of particulate matter, carbon monoxide, nitrogen oxides and other pollutants into the air, leading to severe deterioration of air quality.
+
+        </div>
+        <div class="container">
+            The Energy and Resources Institute (2019) reported that in 2012, air pollution had led to about 5 million deaths in South Asia which is around 22% of the total deaths in the region.stubble burning also affects  soil fertility, economic development and climate. The crop stubbles when could provide immense economic benefits to the farmers and protect the environment from the severe pollution. 
+
+        </div>
+        <div class="container">
+            The situation is very adverse in India due to the rice-wheat rotation system which generates large amount of stubble. The haze of smog observed over India during the winter season is due to stubble burning since it coincides with the burning periods (October-November). During this time, Indian cities like Delhi experience harsh pollution often reaching the severe levels of the air quality index.
+
+        </div>
+    </section>
 
     <footer class="footer">
         <ul>
