--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
             border-bottom: 3px solid rgb(255, 255, 255);
             color: white;
         }
-        input{
+        #input{
             height: 35px;
             width: 400px;
             padding: 5px 10px 5px 20px;
@@ -52,19 +52,18 @@
             margin: 10px;
         }
 
-        button{
+        #submit{
             height: 50px;
             width: 250px;
             padding: 5px 10px 5px 20px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-size: large;
-            background-color: rgb(75, 11, 11);
-            border: 2px solid rgb(136, 35, 194);
+            background-color: rgb(58, 49, 49);
+            border: 2px solid rgb(106, 100, 109);
             color: rgb(206, 206, 206);
             border-radius: 30px;
             margin: 10px;
         }
-
         #button{
             display: grid;
             place-items: center;
@@ -78,23 +77,23 @@
         <form class="form">
             <h3>Farmer Details</h3>
             <div class="name">
-                <input type="text" name="" id="" placeholder="First Name">
-                <input type="text" name="" id="" placeholder="Middle Name">
-                <input type="text" name="" id="" placeholder="Last Name">
+                <input type="text" name="" id="input" placeholder="First Name">
+                <input type="text" name="" id="input" placeholder="Middle Name">
+                <input type="text" name="" id="input" placeholder="Last Name">
             </div>            
             <div class="name">
-                <input type="date" name="" id="" placeholder="Date of Birth">
+                <input type="date" name="" id="input" placeholder="Date of Birth">
 
             </div>
-                <input type="text" name="" id="address" placeholder="Address">
+                <input type="text" name="" id="input" placeholder="Address">
             <div class="name">
 
             </div>
             <div class="name">
-                <input type="text" name="" id="" placeholder="E-mail">
+                <input type="text" name="" id="input" placeholder="E-mail">
             </div>
             <div class="name">
-                <input type="text" name="" id="" placeholder="Phone Number">
+                <input type="text" name="" id="input" placeholder="Phone Number">
             </div>
         </form>
             <form class="form">
@@ -116,19 +115,19 @@
                     <option value="">Union Bank of India</option>
                 </select>
                 <div class="name">
-                    <input type="text" name="" id="" placeholder="Account Number">
+                    <input type="text" name="" id="input" placeholder="Account Number">
                 </div>
                 <div class="name">
-                    <input type="" name="" id="" placeholder="IFSC Code">
+                    <input type="" name="" id="input" placeholder="IFSC Code">
                 </div>
             </div>
             <div class="name">
-                <input type="text" name="" id="" placeholder="E-mail">
+                <input type="text" name="" id="input" placeholder="E-mail">
             </div>
         </form>
         <div id="button">
-        <button type="submit">Register</button>
-    </div>
+            <input type="submit" placeholder="Register" id="submit">
+        </div>
     </div>
 </body>
 </html>
