--- a/about us.html
+++ b/about us.html
@@ -36,14 +36,36 @@
             </ul>
           </div>
     </header>
-    <img alt="" height="2000px" width="100%">
-    <footer class="footer">
+    <section class="section">
+        <div class="container">
+            <div>Over past decades, there has been a significant increase in the incidence of stubble burning after harvests, especially of rice and wheat. This releases large amounts of particulate matter, carbon monoxide, nitrogen oxides and other pollutants into the air, leading to severe deterioration of air quality.</div>
+
+        </div>
+        <div class="container" style="float:right;">
+            The Energy and Resources Institute (2019) reported that in 2012, air pollution had led to about 5 million deaths in South Asia which is around 22% of the total deaths in the region. The crop stubbles when could provide immense economic benefits to the farmers and protect the environment from the severe pollution. 
+        </div>
+        <br><br><br><br><br><br><br><br><br><br>
+        <div class="container">
+            The haze of smog observed over India during the winter season is due to stubble burning since it coincides with the burning periods (October-November). During this time, Indian cities like Delhi experience harsh pollution often reaching the severe levels of the air quality index.
+
+        </div>
+    </section>
+
+        <footer class="footer">
         <ul>
             <li><a href="index.html"><b>Home</b></a></li>
             <li><a href="About us.html"><b>About Us</b></a></li>
             <li><a href=""><b>Contact</b></a></li>
-            <li><button onclick="location.href= 'login.html'"><b>Login</b></button></li>
-            <li><button onclick="location.href='register.html'"><b>Register</b></button></li>
+        </ul>
+        <ul>
+            <li><a href=""><b>Learn More</b></a></li>
+            <li><a onclick="location.href= 'login.html'"><b>Contact Us</b></a></li>
+            <li><a onclick="location.href='register.html'"><b>Help</b></a></li>
+        </ul>
+        <ul>
+            <li><a onclick="location.href= 'login.html'"><b>Login</b></a></li>
+            <li><a onclick="location.href='register.html'"><b>Register</b></a></li>
+            <li><a onclick="location.href='register.html'"><b>Welcome</b></a></li>
         </ul>
         <p class="links">
             <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="socialmedia"><i
