--- a/register.html
+++ b/register.html
@@ -68,6 +68,9 @@
             display: grid;
             place-items: center;
         }
+        #submit:hover{
+            cursor: pointer;
+        }
 
     </style>
 </head>
@@ -126,7 +129,7 @@
             </div>
         </form>
         <div id="button">
-            <input type="submit" placeholder="Register" id="submit">
+            <button type="submit" id="submit" onclick="location.href='welcome.html'">Register</button>
         </div>
     </div>
 </body>
